Fix filter choices not fitting on some phones since the adding of new choices. 	modified:   assets/stylesheets/_schedule.scss

--- a/assets/stylesheets/_schedule.scss
+++ b/assets/stylesheets/_schedule.scss
@@ -65,7 +65,7 @@
 	p, .tag {
 		margin-bottom: 0.5em;
 	}
-	font-size: 3em;
+	font-size: 2.4em;
 }
 .header-button-social{
 	display: none;
